# new_5cycle_ml

./: .gitignore  README.md  cell_classifier_regression_survival_roadmap.html  cell_classifier_regression_survival_roadmap.md
cell_classifier/: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
cell_classifier/_verify_log/: run_all_gates.sh
cell_classifier/configs/: bart.yaml  ebm.yaml  rf.yaml
cell_classifier/notebooks/: quickstart.py
cell_classifier/scripts/: run.py  slurm_sweep.sh  slurm_train.sh  sweep.py
cell_classifier/tests/: test_cli.py  test_discover.py  test_hp_artifacts_per_protocol.py  test_inference.py  test_loader.py  test_manifest.py  test_metrics.py  test_models_registry.py  test_models_rf.py  test_nested_cv.py  test_nested_cv_full_coverage.py  test_nested_cv_no_overfit_columns.py  test_no_cohort_features.py  test_no_mode_branching.py  test_paths.py  test_preprocessing.py  test_production_params_source_required.py  test_production_pipeline.py  test_seeds.py  test_splits.py  test_tune_inner_cv_overfit_columns.py  test_tuning.py  test_validation_pipeline.py
cell_lifetime/: .gitignore  CONVENTIONS.md  INDEX.md  README.md  ROUTINES.md  pyproject.toml  weekend_report.html
cell_lifetime/configs/: ebm_classifier.yaml  ebm_classifier_f1.yaml  ebm_regressor.yaml  lifelines_cox.yaml  lifelines_weibull.yaml  rsf.yaml  rsf_auc_at_N.yaml  rsf_f1_at_N.yaml  xgb_aft.yaml  xgb_aft_auc_at_N.yaml  xgb_aft_f1_at_N.yaml  xgb_classifier.yaml  xgb_classifier_f1.yaml  xgb_regressor.yaml
cell_lifetime/experiments/: README.md  REPORT.html  REPORT.md
cell_lifetime/scripts/: append_index.py  diagnose_run.py  install_env.sh  monday_smoke_real_data.sh  run_routine.sh
cell_lifetime/tests/: test_cli.py  (+14 more)
(+531 files in other folders)
