[project]
name = "cell_classifier"
version = "0.1.0"
description = "Battery cell N-cycle survival classifier (validation + production modes)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "polars>=0.20",
    "pyyaml",
    "scikit-learn>=1.3",
    "optuna",
    "scipy",
    "shap",
    "matplotlib",
]

[project.optional-dependencies]
ebm = ["interpret"]
bart = ["pymc-bart"]
all = ["interpret", "pymc-bart"]
dev = ["pytest", "ruff"]

[project.scripts]
cell-classifier = "cell_classifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
