[project]
name = "cell_lifetime"
version = "0.1.0"
description = "Cycle-life regression + survival models for battery cells (sibling to cell_classifier)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "polars>=0.20",
    "pyyaml",
    "scikit-learn>=1.3",
    "optuna",
    "scipy",
    "shap",
    "matplotlib",
    "cell_classifier",
]

[project.optional-dependencies]
xgb = ["xgboost>=2.0"]
ebm = ["interpret>=0.6"]
survival = ["scikit-survival>=0.22"]
all = ["xgboost>=2.0", "interpret>=0.6", "scikit-survival>=0.22"]
dev = ["pytest", "ruff"]

[project.scripts]
cell-lifetime = "cell_lifetime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_lifetime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
